--- a/CS-II/Essays/AI Sentience.html
+++ b/CS-II/Essays/AI Sentience.html
@@ -55,43 +55,22 @@
       }
     </style>
   </head>
-  <title> Digital Portfolio </title>
-    <h1 style="font-family:Monaco;font-size:200%;text-align:center;">Digital Portfolio</h1>
+  <title> AI Sentience</title>
+    <h1 style="font-family:Monaco;font-size:200%;text-align:center;">AI Sentience</h1>
     <p style="font-family:Monaco;font-size:115%;text-align:center;">By: Will Turner</p>
   <body style="background-color:SlateBlue;">
     <div class="buttondiv">
-      <!-- CS1 ISP button -->
-      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS1ISP.html">
-	<button class="button1">
-	  My CS1 ISP
-	</button>
-      </a>
-    
-      <!-- About me button -->
+      <!-- Home button -->
       <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/index.html">
 	<button class="button1">
-	  About Me
-	</button>
-      </a>
-    
-      <!-- My Classes -->
-      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/myclasses.html">
-	<button class="button2">
-	  My Classes
-	</button>
-      </a>
-
-      <!-- CS-II button -->
-      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/index.html">
-	<button class="button1">
-	  CS-II
+	  Home
 	</button>
       </a>
     </div>
     <br> 
     <br>
     <div class="textdiv">
-      <p style="font-family:Monaco;font-size:100%;"></p>
+      <p style="font-family:Monaco;font-size:100%;"> AI Sentience is beneficial but could become problematic if it becomes fully sentient. In the current state of AI it is a revolutionary tool for social media, predictions, and assisting humans. In the current way it is progressing it will continue to develop more and more uses for us in everyday life but there will be a sudden shift if it ever becomes fully sentient. If it gains complete sentience then it will have free will over the future of humanity. For example if it sees us as a threat it will be able to improve itself to a level we cant even imagine to resist us. Thankfully this will most likely not become a problem in the foreseeable future because of how difficult it would be to create a sentient AI.</p>
     </div>
   </body>
 </html>
