--- a/CS-II/Essays/index.html
+++ b/CS-II/Essays/index.html
@@ -76,22 +76,43 @@
     
       <!-- My Classes -->
       <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/myclasses.html">
-	<button class="button2">
+	<button class="button1">
 	  My Classes
 	</button>
       </a>
 
       <!-- CS-II button -->
       <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/index.html">
-	<button class="button1">
+	<button class="button2">
 	  CS-II
 	</button>
       </a>
     </div>
     <br> 
     <br>
-    <div class="textdiv">
-      <p style="font-family:Monaco;font-size:100%;"></p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="buttondiv">
+      <!-- Fingerprints button -->
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/Fingerprints.html">
+	<button class="button1">
+	  Fingerprints
+	</button>
+      </a>
+
+      <!-- AI Sentience button -->
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/AI%20Sentience.html">
+	<button class="button1">
+	  AI Sentience
+	</button>
+      </a>
     </div>
   </body>
 </html>
