finished myclasses.html file

--- a/myclasses.html
+++ b/myclasses.html
@@ -91,7 +91,7 @@
     <br> 
     <br>
     <div class="textdiv">
-      <p style="font-family:Monaco;font-size:100%;"></p>
+      <p style="font-family:Monaco;font-size:100%;">I am currently enrolled in: <br> -Advanced Pre Cal <br> -AP US History <br> -AP Physics 1 <br> -English 3 <br> -Computer Science 2 <br> -AP Statistics</p>
     </div>
   </body>
 </html>
