fixed AI sentience and Fingerprints 95%

--- a/CS-II/Essays/Fingerprints.html
+++ b/CS-II/Essays/Fingerprints.html
@@ -56,8 +56,6 @@
     </style>
   </head>
   <title> Fingerprints </title>
-    <h1 style="font-family:Monaco;font-size:200%;text-align:center;">Fingerprints</h1>
-    <p style="font-family:Monaco;font-size:115%;text-align:center;">By: Will Turner</p>
   <body style="background-color:SlateBlue;">
     <div class="buttondiv">
       <!-- Home button -->
@@ -69,8 +67,33 @@
     </div>
     <br> 
     <br>
-    <div class="textdiv">
-      <p style="font-family:Monaco;font-size:100%;"> A secure HTTPS connection is one of the most important things on the internet. It ensures your security and privacy while browsing the internet. Although HTTPS is secure there is something know as an HTTPS proxy appliance which is a deviice that circumvents the encryption of HTTPS by adding a pseudo certificate authority to the users device after they connect to a network. This can pose a threat of you being attacked by an MITM (man in the middle) attack which is where security is breached partway through the connection between your device and the server and its used to infect your device. One way this can be stopped is through creating a hash which is a complex mathematical algorith which carefully processes every bit of what they "digest". originally MD5 was the hashing algorithm used by all of the internet but it was found to be a little weak so it was replaced by SHA1. A strong or weak hash is determined by how much the fingerprint is changed if just 1 character of the hash is changed. A certificate authority is an entity that proves their identity through documentation, telephone numbers, etc. When an internet browser establishes a secure coonnection that site must provide a signed CA for the web browsers inspection. SSL Interception cannot be prevented but can be reliably detected because it is not possible to completely spoof any security certificate. A false positive can usually occur with bigger websites that contain multiple CAs which can lead people to have a fingerprint mismatch. A false negative is whenever a website tests negative but really is positive. Personally I think schools should have no rights to eavesdrop on our communications, the government should not without a warrant, and our ISPs should not be allowed to distribute or store the data although since they are providing the internet service they should have a right to see the data.</p>
-    </div>
+    <center style="font-size: 24px">
+      <b>Fingerprints</b> <br><br> William Turner <br><br> Allen ISD Steam Center <br><br> Advanced Computer Science 2 <br><br> Mr.Ben-Yakov <br><br> August 25, 2022
+    </center>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center>
+      <h1>
+	Fingerprints
+      </h1>
+    </center>
+    <center style="font-size: 12pt; font-family:'Times New Roman'; line-height:2">
+      <p style="margin-left:300px; margin-right:300px;">A secure HTTPS connection is one of the most important things on the internet. It ensures your security and privacy while browsing the internet. Although HTTPS is secure there is something know as an HTTPS proxy appliance which is a deviice that circumvents the encryption of HTTPS by adding a pseudo certificate authority to the users device after they connect to a network. This can pose a threat of you being attacked by an MITM (man in the middle) attack which is where security is breached partway through the connection between your device and the server and its used to infect your device. One way this can be stopped is through creating a hash which is a complex mathematical algorith which carefully processes every bit of what they "digest". originally MD5 was the hashing algorithm used by all of the internet but it was found to be a little weak so it was replaced by SHA1. A strong or weak hash is determined by how much the fingerprint is changed if just 1 character of the hash is changed. A certificate authority is an entity that proves their identity through documentation, telephone numbers, etc. When an internet browser establishes a secure coonnection that site must provide a signed CA for the web browsers inspection. SSL Interception cannot be prevented but can be reliably detected because it is not possible to completely spoof any security certificate. A false positive can usually occur with bigger websites that contain multiple CAs which can lead people to have a fingerprint mismatch. A false negative is whenever a website tests negative but really is positive. Personally I think schools should have no rights to eavesdrop on our communications, the government should not without a warrant, and our ISPs should not be allowed to distribute or store the data although since they are providing the internet service they should have a right to see the data.
+      </p>
+    </center>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <center>
+      <h3>
+	<b>References</b>
+      </h3>
+    </center>
+    <p style="font-family:Monaco;font-size:100%; margin-left:300px; margin-right:300px; padding-left: 32px; text-indent: -32px;">Gibson, S. Fingerprints. Gibson Research Corpration. <a href="https://www.grc.com/fingerprints.htm#top">https://www.grc.com/fingerprints.htm#top</a>
+    </p>
   </body>
 </html>
