--- a/CS-II/Essays/index.html
+++ b/CS-II/Essays/index.html
@@ -113,6 +113,13 @@
 	  AI Sentience
 	</button>
       </a>
+
+      <!-- Optimal Sort button -->
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/Optimal%20Sort.html">
+	<button class="button1">
+	  Optimal Sorting
+	</button>
+      </a>
     </div>
   </body>
 </html>
