--- a/CS-II/Essays/index.html
+++ b/CS-II/Essays/index.html
@@ -120,6 +120,20 @@
 	  Optimal Sorting
 	</button>
       </a>
+
+      <!-- Sort Analysis button -->
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/Sort%20Analysis.html">
+	<button class="button1">
+	  Sort Analysis
+	</button>
+      </a>
+
+      <!-- ISP Proposal button -->
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Projects/Business%20Plan/index.html">
+	<button class="button1">
+	  ISP Proposal
+	</button>
+      </a>
     </div>
   </body>
 </html>
