fixed up sort analysis and did ISP acceptance

--- a/CS-II/Essays/index.html
+++ b/CS-II/Essays/index.html
@@ -122,7 +122,7 @@
       </a>
 
       <!-- Sort Analysis button -->
-      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/Sort%20Analysis.html">
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Projects/Optimal%20Sort.html">
 	<button class="button1">
 	  Sort Analysis
 	</button>
@@ -134,6 +134,14 @@
 	  ISP Proposal
 	</button>
       </a>
+
+      <!-- ISP Proposal button -->
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Projects/Business%20Plan/considered.html">
+	<button class="button1">
+	  ISP Acceptance
+	</button>
+      </a>
+      
     </div>
   </body>
 </html>
