--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
 	  CS-II
 	</button>
       </a>
+
+      <!-- Blog button -->
+      <a href="https://www.codermerlin.com/users/william-turner/Digital%20Portfolio/CS-II/Essays/blog.html">
+	<button class="button1">
+	  CS-II
+	</button>
+      </a>
     </div>
     <br> 
     <br>
