remodeled most of digital portfolio + completed the Advanced Sort Algorithms essay

--- a/myclasses.html
+++ b/myclasses.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <script src="baseHTMLimport.js"></script> 
+    <link rel="stylesheet" href="imports/styles.css">
+    <script src="imports/baseHTMLimport.js"></script>
   </head>
   <body>
     
-    <div w3-include-html="baseHTML.html"></div> 
+    <div w3-include-html="imports/baseHTML.html"></div> 
     
-    <div class="textdiv">
-      <p style="font-family:Monaco;font-size:100%;">I am currently enrolled in: <br> -Advanced Pre Cal <br> -AP US History <br> -AP Physics 1 <br> -English 3 <br> -Computer Science 2 <br> -AP Statistics</p>
+    <div class="page">
+      <h4>Junior year classes (11th grade)</h4>
+      <p>-Advanced Pre Cal <br> -AP US History <br> -AP Physics 1 <br> -English 3 <br> -Computer Science 2 <br> -AP Statistics</p>
     </div>
     <script>
       includeHTML();
